* 修改菜单描述

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,32 +1,32 @@
 menu title Installer Debian
 
-label Live
+label live
     menu label Live
     kernel /live/vmlinuz
     append initrd=/live/initrd.img boot=live config   quiet
 
-label Live-686
+label live-686
     menu label Live 686
     kernel /live/vmlinuz2
     append initrd=/live/initrd2.img boot=live config   quiet
 
-label Install-stable-i386
-    menu label stable-i386
+label install-stable-i386
+    menu label Install-stable-i386
     kernel /stable/i386/linux
     append initrd=/stable/i386/initrd.gz vga=788
 
-label Install-stable-amd64
-    menu label stable-amd64
+label install-stable-amd64
+    menu label Install-stable-amd64
     kernel /stable/amd64/linux
     append initrd=/stable/amd64/initrd.gz vga=788
 
-label Install-testing-i386
-    menu label testing-i386
+label install-testing-i386
+    menu label Install-testing-i386
     kernel /testing/i386/linux
     append initrd=/testing/i386/initrd.gz vga=788
 
-label Install-testing-amd64
-    menu label testing-amd64
+label install-testing-amd64
+    menu label Install-testing-amd64
     kernel /testing/amd64/linux
     append initrd=/testing/amd64/initrd.gz vga=788
 
