* remove live usb and add grub-custom.conf

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,23 +1,18 @@
 menu title Installer Debian
 
-label install-stable-i386
-    menu label Install-stable-i386
-    kernel /stable/i386/linux
-    append initrd=/stable/i386/initrd.gz vga=788
-
-label install-stable-amd64
-    menu label Install-stable-amd64
+label install-debain-stable-amd64
+    menu label Install Debain stable
     kernel /stable/amd64/linux
     append initrd=/stable/amd64/initrd.gz vga=788
 
-label install-testing-i386
-    menu label Install-testing-i386
-    kernel /testing/i386/linux
-    append initrd=/testing/i386/initrd.gz vga=788
-
-label install-testing-amd64
-    menu label Install-testing-amd64
+label install-debain-testing-amd64
+    menu label Install Debain testing
     kernel /testing/amd64/linux
     append initrd=/testing/amd64/initrd.gz vga=788
+
+label install-ubuntu-amd64
+    menu label Install Ubuntu
+    kernel /ubuntu/amd64/linux
+    append initrd=/ubuntu/amd64/initrd.gz vga=788
 
 default vesamenu.c32
