* move linux and initrd.gz to installer/

--- a/grub-custom.conf
+++ b/grub-custom.conf
@@ -8,20 +8,20 @@ menuentry 'Install Ubuntu' {
 	insmod ext2
 	set root='hd1,msdos1'
 	search --no-floppy --fs-uuid --set=root 5e9708fa-ff67-4508-a807-65959fad4da0
-	linux /ubuntu/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
-	initrd /ubuntu/amd64/initrd.gz
+	linux /installer/ubuntu/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
+	initrd /installer/ubuntu/amd64/initrd.gz
 }
 menuentry 'Install Debain stable' {
 	insmod ext2
 	set root='hd1,msdos1'
 	search --no-floppy --fs-uuid --set=root 5e9708fa-ff67-4508-a807-65959fad4da0
-	linux /stable/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
-	initrd /stable/amd64/initrd.gz
+	linux /installer/stable/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
+	initrd /installer/stable/amd64/initrd.gz
 }
 menuentry 'Install Debain testing' {
 	insmod ext2
 	set root='hd1,msdos1'
 	search --no-floppy --fs-uuid --set=root 5e9708fa-ff67-4508-a807-65959fad4da0
-	linux /testing/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
-	initrd /testing/amd64/initrd.gz
+	linux /installer/testing/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
+	initrd /installer/testing/amd64/initrd.gz
 }
