--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,18 +1,18 @@
 menu title Installer Debian
 
 label install-debain-stable-amd64
-    menu label Install Debain stable
-    kernel /stable/amd64/linux
-    append initrd=/stable/amd64/initrd.gz vga=788
+    menu label Install Debain Stable Netboot
+    kernel /installer/stable/amd64/linux
+    append vga=788 initrd=/installer/stable/amd64/initrd.gz
 
 label install-debain-testing-amd64
-    menu label Install Debain testing
-    kernel /testing/amd64/linux
-    append initrd=/testing/amd64/initrd.gz vga=788
+    menu label Install Debain Testing Netboot
+    kernel /installer/testing/amd64/linux
+    append vga=788 initrd=/installer/testing/amd64/initrd.gz
 
 label install-ubuntu-amd64
-    menu label Install Ubuntu
-    kernel /ubuntu/amd64/linux
-    append initrd=/ubuntu/amd64/initrd.gz vga=788
+    menu label Install Ubuntu LTS Netboot
+    kernel /installer/ubuntu/amd64/linux
+    append vga=788 initrd=/installer/ubuntu/amd64/initrd.gz
 
 default vesamenu.c32
