--- a/grub-custom.conf
+++ b/grub-custom.conf
@@ -4,24 +4,26 @@ exec tail -n +3 $0
 # menu entries you want to add after this comment.  Be careful not to change
 # the 'exec tail' line above.
 
-menuentry 'Install Ubuntu' {
+set root_uuid=5e9708fa-ff67-4508-a807-65959fad4da0
+
+menuentry 'Install Debain Stable Netboot' {
 	insmod ext2
 	set root='hd1,msdos1'
-	search --no-floppy --fs-uuid --set=root 5e9708fa-ff67-4508-a807-65959fad4da0
-	linux /installer/ubuntu/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
-	initrd /installer/ubuntu/amd64/initrd.gz
-}
-menuentry 'Install Debain stable' {
-	insmod ext2
-	set root='hd1,msdos1'
-	search --no-floppy --fs-uuid --set=root 5e9708fa-ff67-4508-a807-65959fad4da0
-	linux /installer/stable/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
+	search --no-floppy --fs-uuid --set=root ${root_uuid}
+	linux /installer/stable/amd64/linux root=UUID=${root_uuid} ro
 	initrd /installer/stable/amd64/initrd.gz
 }
-menuentry 'Install Debain testing' {
+menuentry 'Install Debain Testing Netboot' {
 	insmod ext2
 	set root='hd1,msdos1'
-	search --no-floppy --fs-uuid --set=root 5e9708fa-ff67-4508-a807-65959fad4da0
-	linux /installer/testing/amd64/linux root=UUID=5e9708fa-ff67-4508-a807-65959fad4da0 ro
+	search --no-floppy --fs-uuid --set=root ${root_uuid}
+	linux /installer/testing/amd64/linux root=UUID=${root_uuid} ro
 	initrd /installer/testing/amd64/initrd.gz
+}
+menuentry 'Install Ubuntu LTS Netboot' {
+	insmod ext2
+	set root='hd1,msdos1'
+	search --no-floppy --fs-uuid --set=root ${root_uuid}
+	linux /installer/ubuntu/amd64/linux root=UUID=${root_uuid} ro
+	initrd /installer/ubuntu/amd64/initrd.gz
 }
